* Added `video_background` option type.
* Added support for responsive visibility options for columns and sections in Builder.
* Added video background support in Layout Builder sections, page banners, and theme base header background options.
* Improvements to WP `[caption]` shortcode, and auto lightbox integration.
* Improvements, structural changes, and option changes to header of Executive theme base.
* Improvements to displaying icons in menus, including using FontAwesome's `fa-fw` class.
* Allow header in Entrepreneur theme base to be configured with no background color.
* Allow copyright helpers `%site_title%` and `%year%` to work with content element of builder (for Footer Template Sync feature).
* Mobile menu toggle button will now match menu highlight color on Entrepreneur base.
* Expanded widget area assignments, requires 1.2.4 update to [Theme Blvd Widget Areas plugin](https://wordpress.org/plugins/theme-blvd-widget-areas/).
* Expanded "background" option type image sizing options.
* Darkened body text in WordPress page editor.
* CSS tweaks to buttons.
* Improved appearance of text logo option with Entrepreneur theme base.
* Improvements to styling of default widgets with lists.
* Improvements to default WP [gallery] integration.
* Improvements (really minor) to Magnific Popup lightbox styling.
* Mobile navigation toggle now displays at tablet viewport and in right of header, across all theme bases.
* Main menu font size made smaller for tablets and sticky menu to fit more buttons.
* Updated to FontAwesome 4.3.
* Minor styling improvements for bbPress.
* Changed Jumbotron element titles to use `<h2>` tags to fit in with header Typography on Theme Options page.
* Improvements to Icon Box element.
* Improvements to WPML language switcher, using WPML's various options and using on mobile.
* Simplified header padding options for Super User theme base to desktop only.
* Increased bottom margin on page titles.