@@ -33,6 +33,7 @@ Jump Start Changelog
 * Added `video_background` option type.
 * Added support for responsive visibility options for columns and sections in Builder.
 * Added video background support in Layout Builder sections, page banners, and theme base header background options.
+* Added CSS classes for use in the Builder: `border-radius-5`, `border-radius-10`, `border-radius-15`, and `border-radius-20`
 * Improvements to WP `[caption]` shortcode, and auto lightbox integration.
 * Improvements, structural changes, and option changes to header of Executive theme base.
 * Improvements to displaying icons in menus, including using FontAwesome's `fa-fw` class.
